--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="/profile picture.png" alt="zahid-img">
+      <img src="/profile picture.png" alt="zahid-profile-img">
       <h2>Hello,</h2>
       <p class="intro">I am a Web Designer / developer based in Dhaka, Bangladesh.  I have a passion for web design and love to create / modify for web and mobile devices.</p>
     </div>
