--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Zahid Hasan - a web designer</title>
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Zahid.</h1>
     <h2>a web developer.</h2>
     <img class="bottom-cloud" src="/cloud.png" alt="cloud-img">
