--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
       </div>
       <div class="skill-row">
-        <img class="programmer-img" src="/programmer.png" alt="programmer-img">
+        <img class="programmer-img" src="programmer.png" alt="programmer-img">
         <h3>Development</h3>
         <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
       </div>
