--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="/cloud.png" alt="cloud-img">
     <h1>I'm Zahid.</h1>
     <h2>a web developer.</h2>
-    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-    <img class="bottom-mountain" src="mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="/cloud.png" alt="cloud-img">
+    <img class="bottom-mountain" src="/mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="profile picture.png" alt="zahid-profile-img">
+      <img src="/profile picture.png" alt="zahid-img">
       <h2>Hello,</h2>
       <p class="intro">I am a Web Designer / developer based in Dhaka, Bangladesh.  I have a passion for web design and love to create / modify for web and mobile devices.</p>
     </div>
@@ -30,12 +30,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="designer-img" src="designer.png" alt="designer-img">
+        <img class="designer-img" src="/designer.png" alt="designer-img">
         <h3>Design</h3>
         <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
       </div>
       <div class="skill-row">
-        <img class="programmer-img" src="programmer.png" alt="programmer-img">
+        <img class="programmer-img" src="/programmer.png" alt="programmer-img">
         <h3>Development</h3>
         <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
       </div>
