--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>I'm Zahid.</h1>
     <h2>a web developer.</h2>
     <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-    <img class="bottom-mountain" src="mountain.png" alt="mountain-img">
+    <img class="bottom-mountain" src="/mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
